// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanExpression allows a & b | c – boolean logic for courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$and": Array [
        Object {
          "$type": "course",
          "department": "CSCI",
          "number": 121,
        },
        Object {
          "$type": "course",
          "department": "CSCI",
          "number": 122,
        },
      ],
      "$booleanType": "and",
      "$type": "boolean",
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 123,
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows a | b & c – boolean logic for courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$and": Array [
        Object {
          "$type": "course",
          "department": "CSCI",
          "number": 122,
        },
        Object {
          "$type": "course",
          "department": "CSCI",
          "number": 123,
        },
      ],
      "$booleanType": "and",
      "$type": "boolean",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows several &-d courses in a row 1`] = `
Object {
  "$and": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 125,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 126,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 123,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows several |-d courses in a row 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 125,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 126,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 123,
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression changes departments when given a new one 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "PSCI",
      "number": 125,
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression keeps duplicates in a list of courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 125,
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses separated by & as being and-d 1`] = `
Object {
  "$and": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 125,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses separated by | as being or-d 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 125,
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses with no departments after an prior department 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 121,
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 125,
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression supports parentheses to control order-of-operations - (a | b) & c 1`] = `
Object {
  "$and": Array [
    Object {
      "$booleanType": "or",
      "$or": Array [
        Object {
          "$type": "course",
          "department": "CSCI",
          "number": 121,
        },
        Object {
          "$type": "course",
          "department": "CSCI",
          "number": 122,
        },
      ],
      "$type": "boolean",
    },
    Object {
      "$type": "course",
      "department": "CSCI",
      "number": 123,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;
